--- a/app/views/datatools/datatool_manage_fee.html
+++ b/app/views/datatools/datatool_manage_fee.html
@@ -40,8 +40,8 @@
                     <colgroup>
                         <col width="12%">
                         <col width="36%">
-                        <col width="36%">
-                        <col width="12%">
+                        <col width="32%">
+                        <col width="16%">
                     </colgroup>
                 <tbody>
 
@@ -72,8 +72,8 @@
                     </td>
                     <td>
                         <div class="td-opt" ng-if="$index==(fCtrl.mall.nonMainShop.feeStandard.length-1)">
-                            <button class="td-opt-add"><em class="amp-icon amp-icon-add"></em></button>
-                            <button class="td-opt-minus"><em class="amp-icon amp-icon-minus"></em></button>
+                            <button class="td-opt-add"><em class="ys-icon ys-icon-add"></em></button>
+                            <button class="td-opt-remove"><em class="ys-icon ys-icon-remove"></em></button>
                         </div>
                     </td>
                 </tr>
@@ -123,8 +123,8 @@
                         </td>
                         <td>
                             <div class="td-opt" ng-if="$index==(fCtrl.street.feeStandard.length-1)">
-                                <button class="td-opt-add" ng-click="fCtrl.add('unMainShop')"><em class="amp-icon amp-icon-add"></em></button>
-                                <button class="td-opt-minus" ng-click="fCtrl.remove('unMainShop')"><em class="amp-icon amp-icon-minus"></em></button>
+                                <button class="td-opt-add" ng-click="fCtrl.add('unMainShop')"><em class="ys-icon ys-icon-add"></em></button>
+                                <button class="td-opt-remove" ng-click="fCtrl.remove('unMainShop')"><em class="ys-icon ys-icon-remove"></em></button>
                             </div>
                         </td>
                     </tr>
@@ -162,8 +162,8 @@
                                    <th ng-repeat="v in fCtrl.fee.updateRate[0].value"><span>{{v.year}}</span></th>
                                     <th>
                                         <div class="td-opt">
-                                            <button class="td-opt-add" ng-click="fCtrl.fee.addYear();"><em class="amp-icon amp-icon-add"></em></button>
-                                            <button class="td-opt-remove" ng-click="fCtrl.fee.removeYear()"><em class="amp-icon amp-icon-remove"></em></button>
+                                            <button class="td-opt-add" ng-click="fCtrl.fee.addYear();"><em class="ys-icon ys-icon-add"></em></button>
+                                            <button class="td-opt-remove" ng-click="fCtrl.fee.removeYear()"><em class="ys-icon ys-icon-remove"></em></button>
                                         </div>
                                     </th>
                                 </tr>
