--- a/app/views/datatools/datatool_manage_fee.html
+++ b/app/views/datatools/datatool_manage_fee.html
@@ -28,7 +28,7 @@
                         <td>
                             <label>标准</label>
                             <div class="td-input-wrapper num-input padding-r-15" >
-                                <input type="text" placeholder="/" data-date="" value="" ng-model="fCtrl.mall.mainShop.feeStandard.value">
+                                <input type="number" placeholder="/" data-date="" value="" ng-model="fCtrl.mall.mainShop.feeStandard.value">
                                 <span class="number-format">{{fCtrl.mall.mainShop.feeStandard.value| number:2}}</span>
                             </div>
                         </td>
@@ -51,12 +51,12 @@
                         <label>面积</label>
                         <div class="td-range-input">
                             <div class="td-input-wrapper num-input padding-r-15" >
-                                <input type="text" placeholder="/"  ng-model="fee.areaRangeStart">
+                                <input type="number" placeholder="/"  ng-model="fee.areaRangeStart">
                                 <span class="number-format">{{fee.areaRangeStart | number:2}}</span>
                             </div>
                             <span class="td-range-divider">~</span>
                             <div class="td-input-wrapper num-input padding-r-15" >
-                                <input type="text" placeholder="/" data-date="" value="" ng-model="fee.areaRangeEnd">
+                                <input type="number" placeholder="/" data-date="" value="" ng-model="fee.areaRangeEnd">
                                 <span class="number-format">{{fee.areaRangeEnd | number:2}}</span>
                             </div>
 
@@ -66,7 +66,7 @@
                     <td>
                         <label>标准</label>
                         <div class="td-input-wrapper num-input padding-r-15" >
-                            <input type="text" placeholder="/" ng-model="fee.value">
+                            <input type="number" placeholder="/" ng-model="fee.value">
                             <span class="number-format">{{fee.value | number:2}}</span>
                         </div>
                     </td>
@@ -103,12 +103,12 @@
                             <label>面积</label>
                             <div class="td-range-input">
                                 <div class="td-input-wrapper num-input padding-r-15" >
-                                    <input type="text" placeholder="/"  ng-model="fee.areaRangeStart">
+                                    <input type="number" placeholder="/"  ng-model="fee.areaRangeStart">
                                     <span class="number-format">{{fee.areaRangeStart | number:2}}</span>
                                 </div>
                                 <span class="td-range-divider">~</span>
                                 <div class="td-input-wrapper num-input padding-r-15" >
-                                    <input type="text" placeholder="/" data-date="" value="" ng-model="fee.areaRangeEnd">
+                                    <input type="number" placeholder="/" data-date="" value="" ng-model="fee.areaRangeEnd">
                                     <span class="number-format">{{fee.areaRangeEnd | number:2}}</span>
                                 </div>
                             </div>
@@ -117,7 +117,7 @@
                         <td>
                             <label>标准</label>
                             <div class="td-input-wrapper num-input padding-r-15" >
-                                <input type="text" placeholder="/" ng-model="fee.value">
+                                <input type="number" placeholder="/" ng-model="fee.value">
                                 <span class="number-format">{{fee.value | number:2}}</span>
                             </div>
                         </td>
