--- a/app/views/datatools/datatool_rpg_set_index.html
+++ b/app/views/datatools/datatool_rpg_set_index.html
@@ -58,42 +58,21 @@
             <h3 class="col-xs-3">各楼层总租金</h3>
         </div>
         <div class="amp-table-wrapper-swiper" id="rpg-floor-table-wrapper">
-            <div class="ys-table-fixed-top" style="padding-left:100px;">
-                <div class="ys-table-static ys-table-static-left" style="width:100px;">
-                    <table class="table  amp-table table-hover table-header-fixed" style="width:100%;">
-                        <thead>
-                            <tr>
-                                <th>铺位号</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
 
-                <div class="swiper-container" style="width:100%;" id="rpg-floor-table-head">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <table class="table  amp-table table-hover table-header-fixed" style="width:2000px;" >
-                                <thead>
-                                <tr>
-                                    <th>GLA</th>
-                                    <th ng-repeat="(k,v) in sCtrl.rpgResultData.floors[0].yearly">
-                                        第{{$index+1}}年
-                                    </th>
-                                </tr>
-                                </thead>
-                            </table>
-                        </div><!--swiper-slide-->
-                    </div><!--swiper-wrapper-->
-                    <!-- Add Scroll Bar -->
-                    <!-- <div class="swiper-scrollbar"></div>-->
-                </div><!--swiper container-->
-            </div>
             <div class="ys-table-main" style="padding-left:100px;">
                 <div class="ys-table-static ys-table-static-left" style="width:100px;">
                     <table class="table  amp-table table-hover" style="width:100%;">
+                        <thead>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        </thead>
                         <tbody>
                         <tr  ng-repeat="floor in sCtrl.rpgResultData.floors" class="data-index data-index-{{$index}}">
                             <th><span title="{{floor.floorIndex}}">{{floor.floorIndex}}</span></th>
+
+                        </tr>
+                        <tr>
                             <th><span>合计</span></th>
                         </tr>
                         </tbody>
@@ -103,22 +82,205 @@
                 <div class="swiper-container" style="width:100%;" id="rpg-floor-main-table">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <table class="table  amp-table table-hover"  style="width:2000px;">
+                            <table class="table  amp-table table-hover"  style="width:{{(sCtrl.rpgResultData.floors[0].yearly.length+1)*120}}px;">
+                                <thead>
+                                <tr>
+                                    <th class="text-right">GLA</th>
+                                    <th ng-repeat="value in sCtrl.rpgResultData.floors[0].yearly track by $index" class="text-right">
+                                        第{{$index+1}}年
+                                    </th>
+                                </tr>
+                                </thead>
                                 <tbody>
                                 <tr ng-repeat="floor in sCtrl.rpgResultData.floors" class="data-index data-index-{{$index}}">
-                                    <td><span>{{sCtrl.getAvg(floor)|number:2}}</span></td>
-                                    <td ng-repeat="(k,v) in floor.yearly">{{v|number:2}}</td>
+                                    <td class="text-right"><span>{{sCtrl.getAvg(floor)|number:2}}</span></td>
+                                    <td ng-repeat="value in floor.yearly track by $index" class="text-right">{{value|number:2}}</td>
                                 </tr>
                                 <tr>
-                                    <td><span>{{sCtrl.getColAvg("avg") | number:2}}</span></td>
-                                    <td ng-repeat="(k,v) in sCtrl.rpgResultData.floors[0].yearly">{{sCtrl.getColAvg($index) | number:2}}</td>
+                                    <td class="td-sum  text-right"><span>{{sCtrl.getColAvg("avg","floors") | number:2}}</span></td>
+                                    <td ng-repeat="value in sCtrl.rpgResultData.floors[0].yearly track by $index" class="td-sum text-right">{{sCtrl.getColAvg($index,"floors") | number:2}}</td>
                                 </tr>
                                 </tbody>
                             </table>
                         </div><!--swiper-slide-->
                     </div><!--swiper-wrapper-->
                     <!-- Add Scroll Bar -->
-                    <div class="swiper-scrollbar"></div>
+                    <div class="swiper-scrollbar swiper-scrollbar-a"></div>
+                </div><!--swiper container-->
+            </div>
+        </div>
+    </div><!--ys-block-->
+
+
+    <div class="amp-block-pd">
+        <div class="amp-block-title">
+            <h3 class="col-xs-3">各楼层平均租金</h3>
+        </div>
+        <div class="amp-table-wrapper-swiper" id="rpg-floor-avg-table-wrapper">
+
+            <div class="ys-table-main" style="padding-left:100px;">
+                <div class="ys-table-static ys-table-static-left" style="width:100px;">
+                    <table class="table  amp-table table-hover" style="width:100%;">
+                        <thead>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr  ng-repeat="floor in sCtrl.rpgResultData.floorsAvg" class="data-index data-index-{{$index}}">
+                            <th><span title="{{floor.floorIndex}}">{{floor.floorIndex}}</span></th>
+
+                        </tr>
+                        <tr>
+                            <th><span>合计</span></th>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="swiper-container" style="width:100%;" id="rpg-floor-avg-main-table">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <table class="table  amp-table table-hover"  style="width:{{(sCtrl.rpgResultData.floorsAvg[0].yearly.length+1)*120}}px;">
+                                <thead>
+                                <tr>
+                                    <th class="text-right">GLA</th>
+                                    <th ng-repeat="value in sCtrl.rpgResultData.floorsAvg[0].yearly track by $index" class="text-right">
+                                        第{{$index+1}}年
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="floor in sCtrl.rpgResultData.floorsAvg" class="data-index data-index-{{$index}}">
+                                    <td class="text-right"><span>{{sCtrl.getAvg(floor)|number:2}}</span></td>
+                                    <td ng-repeat="value in floor.yearly track by $index" class="text-right">{{value|number:2}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><span>{{sCtrl.getColAvg("avg","floorsAvg") | number:2}}</span></td>
+                                    <td ng-repeat="value in sCtrl.rpgResultData.floors[0].yearly track by $index" class="text-right">{{sCtrl.getColAvg($index,"floorsAvg") | number:2}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div><!--swiper-slide-->
+                    </div><!--swiper-wrapper-->
+                    <!-- Add Scroll Bar -->
+                    <div class="swiper-scrollbar swiper-scrollbar-b"></div>
+                </div><!--swiper container-->
+            </div>
+        </div>
+    </div><!--ys-block-->
+
+    <div class="amp-block-pd">
+        <div class="amp-block-title">
+            <h3 class="col-xs-3">各业态总租金</h3>
+        </div>
+        <div class="amp-table-wrapper-swiper" id="rpg-form-table-wrapper">
+
+            <div class="ys-table-main" style="padding-left:100px;">
+                <div class="ys-table-static ys-table-static-left" style="width:100px;">
+                    <table class="table  amp-table table-hover" style="width:100%;">
+                        <thead>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr  ng-repeat="form in sCtrl.rpgResultData.form" class="data-index data-index-{{$index}}">
+                            <th><span title="{{form.formName}}">{{form.formName}}</span></th>
+
+                        </tr>
+                        <tr>
+                            <th><span>合计</span></th>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="swiper-container" style="width:100%;" id="rpg-form-main-table">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <table class="table  amp-table table-hover"  style="width:{{(sCtrl.rpgResultData.form[0].yearly.length+1)*120}}px;">
+                                <thead>
+                                <tr>
+                                    <th class="text-right">GLA</th>
+                                    <th ng-repeat="value in sCtrl.rpgResultData.form[0].yearly track by $index" class="text-right">
+                                        第{{$index+1}}年
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="form in sCtrl.rpgResultData.form" class="data-index data-index-{{$index}}">
+                                    <td class="text-right"><span>{{sCtrl.getAvg(form)|number:2}}</span></td>
+                                    <td ng-repeat="value in form.yearly track by $index" class="text-right">{{value|number:2}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><span>{{sCtrl.getColAvg("avg","form") | number:2}}</span></td>
+                                    <td ng-repeat="value in sCtrl.rpgResultData.form[0].yearly track by $index" class="text-right">{{sCtrl.getColAvg($index,"form") | number:2}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div><!--swiper-slide-->
+                    </div><!--swiper-wrapper-->
+                    <!-- Add Scroll Bar -->
+                    <div class="swiper-scrollbar swiper-scrollbar-c"></div>
+                </div><!--swiper container-->
+            </div>
+        </div>
+    </div><!--ys-block-->
+
+    <div class="amp-block-pd">
+        <div class="amp-block-title">
+            <h3 class="col-xs-3">各业态平均租金</h3>
+        </div>
+        <div class="amp-table-wrapper-swiper" id="rpg-form-avg-table-wrapper">
+
+            <div class="ys-table-main" style="padding-left:100px;">
+                <div class="ys-table-static ys-table-static-left" style="width:100px;">
+                    <table class="table  amp-table table-hover" style="width:100%;">
+                        <thead>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr  ng-repeat="form in sCtrl.rpgResultData.formAvg" class="data-index data-index-{{$index}}">
+                            <th><span title="{{form.formName}}">{{form.formName}}</span></th>
+
+                        </tr>
+                        <tr>
+                            <th><span>合计</span></th>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="swiper-container" style="width:100%;" id="rpg-form-avg-main-table">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <table class="table  amp-table table-hover"  style="width:{{(sCtrl.rpgResultData.formAvg[0].yearly.length+1)*120}}px;">
+                                <thead>
+                                <tr>
+                                    <th class="text-right">GLA</th>
+                                    <th ng-repeat="value in sCtrl.rpgResultData.formAvg[0].yearly track by $index" class="text-right">
+                                        第{{$index+1}}年
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="form in sCtrl.rpgResultData.formAvg" class="data-index data-index-{{$index}}">
+                                    <td class="text-right"><span>{{sCtrl.getAvg(form)|number:2}}</span></td>
+                                    <td ng-repeat="value in form.yearly track by $index" class="text-right">{{value|number:2}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><span>{{sCtrl.getColAvg("avg","formAvg") | number:2}}</span></td>
+                                    <td ng-repeat="value in sCtrl.rpgResultData.form[0].yearly track by $index" class="text-right">{{sCtrl.getColAvg($index,"formAvg") | number:2}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div><!--swiper-slide-->
+                    </div><!--swiper-wrapper-->
+                    <!-- Add Scroll Bar -->
+                    <div class="swiper-scrollbar swiper-scrollbar-d"></div>
                 </div><!--swiper container-->
             </div>
         </div>
