--- a/app/views/datatools/datatool_manage_fee.html
+++ b/app/views/datatools/datatool_manage_fee.html
@@ -72,8 +72,8 @@
                     </td>
                     <td>
                         <div class="td-opt" ng-if="$index==(fCtrl.mall.nonMainShop.feeStandard.length-1)">
-                            <button class="td-opt-add"><em class="ys-icon ys-icon-add"></em></button>
-                            <button class="td-opt-remove"><em class="ys-icon ys-icon-remove"></em></button>
+                            <button class="td-opt-add" ng-click="fCtrl.add('nonMainShop')"><em class="ys-icon ys-icon-add"></em></button>
+                            <button class="td-opt-remove" ng-click="fCtrl.remove('nonMainShop')"><em class="ys-icon ys-icon-remove"></em></button>
                         </div>
                     </td>
                 </tr>
@@ -123,8 +123,8 @@
                         </td>
                         <td>
                             <div class="td-opt" ng-if="$index==(fCtrl.street.feeStandard.length-1)">
-                                <button class="td-opt-add" ng-click="fCtrl.add('unMainShop')"><em class="ys-icon ys-icon-add"></em></button>
-                                <button class="td-opt-remove" ng-click="fCtrl.remove('unMainShop')"><em class="ys-icon ys-icon-remove"></em></button>
+                                <button class="td-opt-add" ng-click="fCtrl.add('street')"><em class="ys-icon ys-icon-add"></em></button>
+                                <button class="td-opt-remove" ng-click="fCtrl.remove('street')"><em class="ys-icon ys-icon-remove"></em></button>
                             </div>
                         </td>
                     </tr>
