--- a/app/views/datatools/datatool_manage_fee.html
+++ b/app/views/datatools/datatool_manage_fee.html
@@ -193,7 +193,7 @@
     <div class="amp-block-pd bottom-block clearfix">
             <div class="btn-wrapper pull-right">
                 <a ng-disabled="feeForm.$invalid" class="btn btn-default amp-btn ys-tips" id="btn-create" ng-click="fCtrl.setSave()"  style="float:right;margin-left:20px;" tabindex="-1">保存</a>
-                <a ng-disabled="feeForm.$invalid" class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-save" ng-click="fCtrl.setReset()" style="float:right;" tabindex="-1>重置</a>
+                <a ng-disabled="feeForm.$invalid" class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-save" ng-click="fCtrl.setReset()" style="float:right;" tabindex="-1">重置</a>
             </div>
      </div>
     </form>
