--- a/app/views/blank_page.html
+++ b/app/views/blank_page.html
@@ -1,10 +1,5 @@
 <div class="amp-main-panel"  id="blank-page">
-
+    <em class="amp-blank-page-img"></em>
 </div><!-- amp-main-panel -->
-<script>
-    $(function(){
-        var mainPageHeight = $(window).height()-64;
-        $("#blank-page").css("height",mainPageHeight+"px");
-    });
-</script>
+
 
