--- a/app/static/css/main/main.css
+++ b/app/static/css/main/main.css
@@ -73,7 +73,7 @@ html,body{padding:0;min-width: 100%;min-height:650px;height:100vh;}
 
 #ys-amp-create #amp-projects-table{margin-bottom:0;}
 
-#ys-amp-create .amp-opt-block{height:80px;padding:20px;text-align: center;position: relative;}
+#ys-amp-create .amp-opt-block{height:80px;padding:20px;padding-top:0;text-align: center;position: relative;}
 
 #ys-amp-create .amp-create-project{padding:25px 15px;text-align: center;}
 #ys-amp-create .amp-create-project h3{margin-bottom:45px;height: 54px;line-height: 54px;font-size: 35px;color:#fff;}
