--- a/app/static/css/main/main.css
+++ b/app/static/css/main/main.css
@@ -151,7 +151,7 @@ span.ys-icon-dropdown{display: block;
 #ys-user,#ys-logout{display:inline-block; position:relative;padding-left:20px;margin-left:20px;height:44px;line-height: 44px;color:#fff;text-decoration: none;font-size: 14px;cursor:pointer;}
 #ys-user:before,#ys-logout:before{display:block;position: absolute;width:14px;height:16px;top:50%;margin-top:-8px;left:0;background-image: url(../../images/icon.png);background-position:-40px -290px; background-repeat: no-repeat; content:" ";}
 #ys-logout:before{background-position:-88px -290px;}
-#ys-user:hover,#ys-logout:hover{color:#e64e4d;}
+#ys-user:hover,#ys-logout:hover{color:#5ab46e;}
 #ys-user:hover:before{background-position:-64px -290px;}
 #ys-logout:hover:before{background-position:-111px -290px;}
 
