--- a/app/views/datatools/datatool_irr_plan.html
+++ b/app/views/datatools/datatool_irr_plan.html
@@ -406,8 +406,8 @@
                                 <tr class="tr-sub" data-index="4">
                                     <td ng-repeat="pv in pCtrl.irrData[4].values | take:2 :pCtrl.quitYear ">
                                         <div class="td-input-wrapper num-input padding-r-15" >
-                                        <input type="number" placeholder="/" data-date="" value="" ng-model="pv.value">
-                                        <span class="number-format">{{pv.value*100| number:2}}<i class="unit-addon">%</i></span>
+                                            <input type="number" placeholder="/" data-date="" value="" ng-model="pv.value" ng-paste="pCtrl.pasteEv($event,pv)">
+                                            <span class="number-format">{{pv.value*100| number:2}}<i class="unit-addon">%</i></span>
                                         </div>
                                     </td>
                                 </tr>
