--- a/app/static/css/views/noi.css
+++ b/app/static/css/views/noi.css
@@ -57,6 +57,8 @@
 #noi #noi-arrearage .amp-table>thead>tr>th,
 #noi #noi-arrearage .amp-table>tbody>tr>td{padding-right:30px;padding-left:30px;text-align: right;}
 
+#noi .chart-wrapper em.chart-axis-info{top:8px;left:48px;}
+
 
 
 
