--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -398,9 +398,9 @@
             </table>
         </div>
     </div><!--ys-block-->
-    <div class="amp-block-pd clearfix" style="display:none">
+    <div class="amp-block-pd clearfix" style="">
         <div class="amp-block-title">
-            <h3 class="col-xs-4">NOI实际与方案(一、二、三)对比</h3>
+            <h3 class="col-xs-4">NOI实际与方案（一、二、三）对比</h3>
         </div>
         <div class="col-xs-12 chart-wrapper" id="noi-chart-wrapper" >
             <em class="chart-axis-info chart-axis-y-info">万元</em>
